# YamlQL

./: .gitignore  README.md  pyproject.toml
tests/: test_yamlql.py
tests/test_data/: complex_sample.yaml  config-sample.yml  deep_nested.yml  docker-compose-full.yml  edge_cases.yml  join-validation-data.yml  multiple-entries.yaml  sample.yaml
yamlql_library/: cli.py  loader.py
