[project]
name = "yamlql"
version = "0.1.0"
description = "Query YAML files with SQL using DuckDB."
authors = [
    { name = "Sarav", email = "sarav@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9.0",
    "pandas>=2.0.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
yamlql = "yamlql_library.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yamlql_library*"] 